[package]
name = "ksp2d"
version = "0.0.1"
authors = ["Aminion <aminion@protonmail.com>"]
edition = "2018"

[dependencies]
glam = "^0.28"
crossbeam = "^0.8.4"
rand = "^0.8.5"
log = "0.4.21"
env_logger = "0.11.3"

[dependencies.sdl2]
version = "^0.37"
default-features = false
features = ["mixer", "gfx"]

[dependencies.legion]
version = "^0.4.0"
default-features = false
features = ["codegen"]