[package]
name = "ksp2d"
version = "0.0.1"
authors = ["Aminion <aminion@protonmail.com>"]
edition = "2018"

[dependencies]
glam = "0.30.1"
crossbeam = "0.8.4"
rand = "0.9.0"
log = "0.4.27"
env_logger = "0.11.7"
physical_constants = "0.5.0"

[dependencies.sdl2]
version = "0.37"
default-features = false
features = ["mixer", "gfx", "ttf"]

[dependencies.legion]
version = "0.4.0"
default-features = false
features = ["codegen"]